# Chess-Engine

temp/: CMakeLists.txt  README.md
temp/.cache/clangd/index/: json.hpp.6919D6BAF9D4FF54.idx  libzippp.cpp.984C676D05BEE54F.idx  libzippp.h.AE68080ADAC31FB8.idx  main.cpp.29518ECEF6441470.idx  metadata.cpp.CEEB75B810AA1079.idx  metadata.hpp.57EAA00061D85562.idx
temp/include/: metadata.hpp
temp/src/: main.cpp  metadata.cpp
temp/submodule/zip/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  libzippp-target.cmake
temp/submodule/zip/lib/zlib-1.2.13/: Makefile
